[-] Fix scrollbar and http link

--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -29,7 +29,7 @@ header {
 
     ul {
       margin: 0;
-      overflow-x: scroll;
+      overflow-x: auto;
       padding: 0;
       white-space: nowrap;
 
